--- a/e2e-app/src/index.html
+++ b/e2e-app/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>E2e</title>
@@ -7,8 +8,24 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <style>
+    /* body {
+      position: relative;
+      transform: scale(0.75);
+    } */
+
+    app-root {
+      position: relative;
+      display: block;
+      transform: scale(0.75);
+      border: 1px solid red;
+    }
+  </style>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
